[workspace]
resolver = "2"
members = [
    "nulla-core",
    "nulla-db",
    "nulla-net",
    "nulla-wallet",
    "nulla-node",
    "nulla-rpc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NULLA Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core crypto and hashing
blake3 = "1.5"
k256 = { version = "0.13", features = ["ecdh", "std"] }
ed25519-dalek = "2.1"
argon2 = "0.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-channel = "2.3"

# Database
sled = "0.34"

# Networking
libp2p = { version = "0.54", features = [
    "tcp",
    "dns",
    "tokio",
    "noise",
    "yamux",
    "identify",
    "ping",
    "kad",
    "gossipsub",
    "request-response",
    "macros",
    "serde",
] }
jsonrpsee = { version = "0.22", features = ["server", "macros"] }

# Utilities
bytes = "1.9"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
lru = "0.12"
rand = "0.8"
hex = "0.4"
futures = "0.3"
async-trait = "0.1"
rayon = "1.10"

# Time
chrono = "0.4"

# Progress bars
indicatif = "0.17"
