[package]
name = "nulla-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
k256.workspace = true
serde.workspace = true
bincode.workspace = true
postcard.workspace = true
bytes.workspace = true
thiserror.workspace = true
