[package]
name = "nulla-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
k256.workspace = true
serde.workspace = true
bincode.workspace = true
postcard.workspace = true
bytes.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
num-bigint.workspace = true  # SECURITY: For safe difficulty calculation (CRIT-NEW-004)
num-traits.workspace = true  # For BigUint traits
