[package]
name = "nulla-electrum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nulla-core = { path = "../nulla-core" }
nulla-db = { path = "../nulla-db" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
blake3.workspace = true
thiserror.workspace = true
