[package]
name = "nulla-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nulla-core = { path = "../nulla-core" }
libp2p.workspace = true
tokio.workspace = true
async-channel.workspace = true
serde.workspace = true
postcard.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
lru.workspace = true
rand.workspace = true
futures.workspace = true
async-trait.workspace = true
bincode.workspace = true
