[package]
name = "nulla-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nulla"
path = "src/main.rs"

[dependencies]
nulla-core = { path = "../nulla-core" }
nulla-db = { path = "../nulla-db" }
nulla-net = { path = "../nulla-net" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
hex.workspace = true
rand.workspace = true
libp2p.workspace = true
chrono.workspace = true
async-channel.workspace = true
indicatif.workspace = true
