[package]
name = "nulla-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
nulla-core = { path = "../nulla-core" }
nulla-db = { path = "../nulla-db" }
nulla-wallet = { path = "../nulla-wallet" }
nulla-net = { path = "../nulla-net" }
jsonrpsee.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"
hex.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
bincode.workspace = true
async-trait.workspace = true
async-channel.workspace = true
ed25519-dalek.workspace = true
governor.workspace = true  # SECURITY: For RPC rate limiting (HIGH-NEW-003)
